CHANGES IN VERSION 1.12.0
-------------------------

NEW FEATURES

    o `PackageStatus` now indicates whether a package is slated for
      'Deprecation' by checking the `meat-index.dcf` file.
    o `pkgDownloadStats` provides the download statistics table for a
      particular package.

BUG FIXES

    o `biocDownloadStats` now includes all types of Bioconductor packages 
    o `biocBuildReport` improved to work on old-rel, release, and devel
      Bioconductor versions

CHANGES IN VERSION 1.10.0
-------------------------

NEW FEATURES

    o `biocPkgRanges` allows for easy identification of package statuses from
      the build report for a specified range of packages (ordered
      alphabetically)
    o `biocBuildEmail` provides core-team functionality for sending email
      notifications to package maintainers

SIGNIFICANT USER-VISIBLE CHANGES

    o `biocBuildEmail` allows for saving a credentials file for email
      authentication via the `credFile` argument
    o `setCache` uses `tools::R_user_dir("BiocPkgTools", "cache")` instead of
      `rappdirs::user_cache_dir`

BUG FIXES

    o `biocBuildReport` accounts for some packages whose `DESCRIPTION` file is
      malformed
    o `biocBuildReport` updated to changes in the build report format

CHANGES IN VERSION 1.2.0
-------------------------

NEW FEATURES

    o Add HTML Package Report template as RStudio rmarkdown
      template to quickly generate overviews of package stats
      for grants, etc.
    o Add parent terms to biocViews to support better
      search and browse by term

BUG FIXES

    o Fix small css bug that caused paragraph tag
      mis-rendering in vignettes when biocExplore()
      used.
    o Completed list column extraction for all list
      columns in biocPkgList

CHANGES IN VERSION 1.0.0 
-------------------------

NEW FEATURES

    o Bioc release date: 2018-10-31