@@ -33,6 +33,7 @@ export(problemPage)
 export(sentHistory)
 export(setCache)
 export(subgraphByDegree)
+export(templatePath)
 import(biocViews)
 import(tools)
 import(utils)
